# uke-tui

./: Cargo.toml  LICENSE  README.md  ascii-uke.txt  chords.txt
src/: chords.rs  main.rs  tui.rs
