[package]
name = "uke-tui"
version = "0.1.0"
edition = "2024"
description = "A terminal ukulele-chord viewer with Ratatui"
repository = "https://github.com/ishan-dubey/uke-tui"
homepage = "https://github.com/ishan-dubey/uke-tui"
keywords = ["ukulele", "cli", "tui", "rust"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
unicode-width = "0.2.0"
